# whisper

./: .env  .gitignore  Cargo.toml  Dockerfile  READEME.md  README.md  railway.toml
src/: db.rs  lib.rs  main.rs  routes.rs  ws.rs
src/auth/: claims.rs  firebase_auth.rs  handlers.rs  mod.rs  routes.rs  service.rs  types.rs
src/entity/: blocked_users.rs  messages.rs  mod.rs  users.rs
