[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.0", features = ["ws"] }
tokio = { version = "1", features = ["full"] } # Async runtime
serde = { version = "1", features = ["derive"] } # JSON serialization
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] } # Database
redis = "0.25"       # Caching, pub/sub for real-time messaging
uuid = { version = "1", features = ["v4"] } # Unique IDs for users/messages
tracing = "0.1"      # Logging
tracing-subscriber = "0.3"
dotenvy = "0.15"     # Environment variables
futures = "0.3"  # For handling async streams
tokio-tungstenite = "0.21"  # WebSocket support
tokio-postgres = "0.7.13"
